--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           个人中心
         </a>
         <dl class="layui-nav-child">
-          <dd><a href="">基本资料</a></dd>
-          <dd><a href="">安全设置</a></dd>
-          <dd><a href="">重置密码</a></dd>
+          <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+          <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+          <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
         </dl>
       </li>
       <li class="layui-nav-item">
@@ -82,15 +82,27 @@
             <span class="iconfont icon-user"></span>
             个人中心</a>
           <dl class="layui-nav-child">
-            <dd><a href="javascript:;">
+            <!-- 基本资料 -->
+            <dd>
+              <a href="/user/user_info.html" target="fm">
                 <i class="layui-icon layui-icon-note"></i>  
-                基本资料</a></dd>
-            <dd><a href="javascript:;">
+                基本资料
+              </a>
+            </dd>
+            <!-- 更换头像 -->
+            <dd>
+              <a href="/user/user_avatar.html" target="fm">
                 <i class="layui-icon layui-icon-note"></i>  
-                更换头像</a></dd>
-            <dd><a href="javascript:;">
+                更换头像
+              </a>
+            </dd>
+            <!-- 重置密码 -->
+            <dd>
+              <a href="/user/user_pwd.html" target="fm">
                 <i class="layui-icon layui-icon-note"></i>  
-                重置密码</a></dd>
+                重置密码
+              </a>
+            </dd>
           </dl>
         </li>
       </ul>
