--- a/index.html
+++ b/index.html
@@ -66,15 +66,27 @@
             <span class="iconfont icon-16"></span>
               文章管理</a>
           <dl class="layui-nav-child">
-            <dd><a href="javascript:;">
+            <!-- 文章类别 -->
+            <dd>
+              <a href="/article/art_cate.html" target="fm">
                 <i class="layui-icon layui-icon-note"></i>  
-                文章类别</a></dd>
-            <dd><a href="javascript:;">
+                文章类别
+              </a>
+            </dd>
+                <!-- 文章列表 -->
+            <dd>
+              <a id="art_list" href="/article/art_list.html" target="fm">
                 <i class="layui-icon layui-icon-note"></i>  
-                文章列表</a></dd>
-            <dd><a href="javascript:;">
+                文章列表
+              </a>
+            </dd>
+                <!-- 发布文章 -->
+            <dd>
+              <a href="/article/art_pub.html" target="fm">
                 <i class="layui-icon layui-icon-note"></i>  
-                发布文章</a></dd>
+                发布文章
+              </a>
+            </dd>
           </dl>
         </li>
         <li class="layui-nav-item">
